kubernetes-monitoring/nginx-exporter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-exporter-service
  namespace: homework
  labels:
    app: nginx-exporter
spec:
  selector:
    app: nginx-exporter
  ports:
  - name: metrics
    port: 9113
    targetPort: 9113
  type: ClusterIP
