kubernetes-monitoring/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /metrics
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
      - path: /nginx_status
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-service
            port: 
              number: 8080
